courses/style.css
/* roboto-regular - latin */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    src: local(''), 
         url('../fonts/roboto-v20-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('../fonts/roboto-v20-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
  }

/* roboto-mono-regular - latin */
@font-face {
    font-family: 'Roboto Mono';
    font-style: normal;
    font-weight: 400;
    src: local(''),
         url('../fonts/roboto-mono-v12-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('../fonts/roboto-mono-v12-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
    
body {
    font-family: 'Roboto', sans-serif;
    line-height: 1.4em;
    font-size: 1em;
    color: #292d34;
}

pre {
    font-family: 'Roboto Mono', monospace;
    line-height: 1.4em;
    font-size: 1.2em;
    color: #3b8452;
}

code {
    line-height: 1.4em;
    font-size: 1.2em;
    color: #d98e24;
}

h2 {
    font-weight: 400;
    color: #3b8452;
}

h3 {
    font-weight: 400;
    color: #3b8452;
}

a {
    color: #3889c7;
}

img {
    padding: 20px;
}

.container {
    max-width: 670px;
    margin: auto;
}

.table-style {
    border-collapse: collapse;
    width: 100%;
}
  
.table-style td, #customers th {
    border: 1px solid #ddd;
    padding: 8px;
}
  
.table-style tr:nth-child(even){background-color: #f2f2f2;}
  
.table-style tr:hover {background-color: #ddd;}
  
.table-style th {
    padding-top: 12px;
    padding-bottom: 12px;
    padding-left: 10px;
    text-align: left;
    background-color: #3b8452;
    color: white;
}

/************* Embedded ***********/

.gist {
    padding-top: 10px;
}

.gist .gist-meta {
    display: none;
}

/************ Custom ************/

img {
    max-width: 670px;
    padding: 0px;
}

.img-bool {
    max-width: 250px;
    padding: 10px;
}

.img-w-border {
    border: #41474e 2px solid;
}

.img-float-right {
    float: right;
    max-width: 60%;
}

.img-float-left {
    float: left;
    max-width: 60%;
}

@media only screen and (max-width: 640px) {

    #general-overview-architecture, #general-overview-rbac, #general-overview-triangle, #general-overview-map {
        display: none;
    }
}


/* BEGIN expandable/collapsible region */
input[type='checkbox'] { 
    display: none; 
}

.wrap-collabsible { 
    margin: 1.2rem 0; 
}

.lbl-toggle { 
    display: block; 
    font-weight: bold; 
    font-size: 1rem; 
    text-align: left; 
    padding: 1rem; 
    color: #DDD; 
    background: #3889c7; 
    cursor: pointer; 
    border-radius: 7px; 
    transition: all 0.25s ease-out; 
} 

.lbl-toggle:hover { 
    color: #FFF; 
} 

.lbl-toggle::before { 
    content: ' '; 
    display: inline-block; 
    border-top: 5px solid transparent; 
    border-bottom: 5px solid transparent; 
    border-left: 5px solid currentColor; 
    vertical-align: middle; 
    margin-right: .7rem; 
    transform: translateY(-2px); 
    transition: transform .2s ease-out; 
} 

.toggle:checked+.lbl-toggle::before { 
    transform: rotate(90deg) translateX(-3px); 
} 

.collapsible-content { 
    max-height: 0px; 
    overflow: hidden; 
    transition: max-height .25s ease-in-out; 
} 

.toggle:checked + .lbl-toggle + .collapsible-content { 
    max-height: 100%; 
} 

.toggle:checked+.lbl-toggle { 
    border-bottom-right-radius: 0; 
    border-bottom-left-radius: 0; 
} 

.collapsible-content .content-inner { 
    
    background: #a7b8c730; 
    border-bottom: 0px solid #3889c7; 
    border-bottom-left-radius: 7px; 
    border-bottom-right-radius: 7px; 
    padding: .5rem 1rem; 
} 

.collapsible-content p { 
    margin-bottom: 0; 
}
/* END expandable/collapsible region */

